--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -795,6 +795,7 @@ dtb-$(CONFIG_RCAR_GEN3) += \
 	r8a77965-salvator-x-u-boot.dtb \
 	r8a77965-salvator-xs-u-boot.dtb \
 	r8a77970-eagle-u-boot.dtb \
+	r8a77970-v3msk-u-boot.dtb \
 	r8a77980-condor-u-boot.dtb \
 	r8a77990-ebisu-u-boot.dtb \
 	r8a77995-draak-u-boot.dtb \
