--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -941,6 +941,7 @@ dtb-$(CONFIG_RCAR_GEN3) += \
 	r8a77970-eagle-u-boot.dtb \
 	r8a77970-eagle-function-u-boot.dtb \
 	r8a77980-condor-u-boot.dtb \
+	r8a77980-v3hsk-u-boot.dtb \
 	r8a77990-ebisu-u-boot.dtb \
 	r8a77995-draak-u-boot.dtb \
 	r8a779a0-falcon-u-boot.dtb
