arm: renesas: v3hsk: Add CPLD support
This adds CPLD sysreset driver to the R-Car V3H SK board.

Signed-off-by: Valentine Barshak <valentine.barshak@cogentembedded.com>

--- a/arch/arm/dts/r8a77980-v3hsk-u-boot.dts
+++ b/arch/arm/dts/r8a77980-v3hsk-u-boot.dts
@@ -32,3 +32,11 @@
 		status = "okay";
 	};
 };
+
+&i2c0 {
+	cpld {
+		compatible = "renesas,v3hsk-cpld";
+		reg = <0x70>;
+		u-boot,i2c-offset-len = <2>;
+	};
+};
