--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -939,6 +939,7 @@ dtb-$(CONFIG_RCAR_GEN3) += \
 	r8a77965-ulcb-u-boot.dtb \
 	r8a77965-salvator-x-u-boot.dtb \
 	r8a77970-eagle-u-boot.dtb \
+	r8a77970-eagle-function-u-boot.dtb \
 	r8a77980-condor-u-boot.dtb \
 	r8a77990-ebisu-u-boot.dtb \
 	r8a77995-draak-u-boot.dtb \
