--- a/arch/arm/mach-rmobile/Kconfig
+++ b/arch/arm/mach-rmobile/Kconfig
@@ -35,6 +35,22 @@ config RCAR_GEN3
 	imply SPL_YMODEM_SUPPORT
 	imply SPL_USE_TINY_PRINTF
 
+config RCAR_GEN4
+	bool "Renesas ARM SoCs R-Car Gen4 (64bit)"
+	select ARM64
+	select PHY
+	select CMD_CACHE
+	select OF_BOARD_SETUP
+	select PINCTRL
+	select PINCONF
+	select PINCTRL_PFC
+	select POSITION_INDEPENDENT
+	imply CMD_FS_UUID
+	imply CMD_GPT
+	imply CMD_UUID
+	imply CMD_MMC_SWRITE if MMC
+	imply SUPPORT_EMMC_RPMB if MMC
+
 config RZA1
 	prompt "Renesas ARM SoCs RZ/A1 (32bit)"
 	select CPU_V7A
