--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -273,7 +273,7 @@ config PL022_SPI
 
 config RENESAS_RPC_SPI
 	bool "Renesas RPC SPI driver"
-	depends on RCAR_GEN3 || RZA1
+	depends on RCAR_GEN3 || RZA1 || RCAR_GEN4
 	imply SPI_FLASH_BAR
 	help
 	  Enable the Renesas RPC SPI driver, used to access SPI NOR flash
