--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -312,7 +312,7 @@ config SPI_QUP
 
 config RENESAS_RPC_SPI
 	bool "Renesas RPC SPI driver"
-	depends on RCAR_GEN3 || RZA1
+	depends on RCAR_GEN3 || RZA1 || RCAR_GEN4
 	imply SPI_FLASH_BAR
 	help
 	  Enable the Renesas RPC SPI driver, used to access SPI NOR flash
