ARM: renesas: Add R8A779F0 S4 Spider board code
Add board code for R8A779F0 S4 Spider board.

Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -804,6 +804,13 @@ ifdef CONFIG_RCAR_GEN3
 DTC_FLAGS += -R 4 -p 0x1000
 endif
 
+dtb-$(CONFIG_RCAR_GEN4) += \
+	r8a779f0-spider-u-boot.dtb
+
+ifdef CONFIG_RCAR_GEN4
+DTC_FLAGS += -R 4 -p 0x1000
+endif
+
 dtb-$(CONFIG_RZA1) += \
 	r7s72100-gr-peach-u-boot.dtb
 
