--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -951,7 +951,8 @@ DTC_FLAGS += -R 4 -p 0x1000
 endif
 
 dtb-$(CONFIG_RCAR_GEN4) += \
-	r8a779a0-falcon-u-boot.dtb
+	r8a779a0-falcon-u-boot.dtb \
+	r8a779f0-spider-u-boot.dtb
 
 ifdef CONFIG_RCAR_GEN4
 DTC_FLAGS += -R 4 -p 0x1000
