--- a/drivers/clk/renesas/Kconfig
+++ b/drivers/clk/renesas/Kconfig
@@ -108,3 +108,16 @@ config CLK_R8A779A0
 	depends on CLK_RCAR_GEN3
 	help
 	  Enable this to support the clocks on Renesas R8A779A0 SoC.
+
+config CLK_RCAR_GEN4
+	bool "Renesas RCar Gen4 clock driver"
+	def_bool y if RCAR_GEN4
+	depends on CLK_RENESAS
+	help
+	  Enable this to support the clocks on Renesas RCar Gen4 SoC.
+
+config CLK_R8A779F0
+	bool "Renesas R8A779F0 clock driver"
+	depends on CLK_RCAR_GEN4
+	help
+	  Enable this to support the clocks on Renesas R8A779F0 SoC.
