--- a/configs/r8a779f0_spider_defconfig
+++ b/configs/r8a779f0_spider_defconfig
@@ -39,6 +39,9 @@ CONFIG_SYSCON=y
 CONFIG_CLK=y
 CONFIG_CLK_RENESAS=y
 CONFIG_RCAR_GPIO=y
+CONFIG_DM_ETH=y
+CONFIG_RENESAS_ETHER_SWITCH=y
+CONFIG_PHY_MARVELL=y
 CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_RCAR_I2C=y
 CONFIG_DM_MMC=y
