arm: dts: r8a779f0: Add Renesas Ethernet Switch support
This patch adds Ethernet Switch support on R-Car S4 (r8a779f0) SoC.

Signed-off-by: Phong Hoang <phong.hoang.wz@renesas.com>
Signed-off-by: Takeshi Kihara <takeshi.kihara.df@renesas.com>
Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/arch/arm/dts/r8a779f0.dtsi
+++ b/arch/arm/dts/r8a779f0.dtsi
@@ -377,6 +377,20 @@
 			status = "disabled";
 		};
 
+		rswitch: ethernet@e68c0000 {
+			compatible = "renesas,etherswitch-r8a779f0",
+				     "renesas,etherswitch";
+			reg = <0 0xe68c0000 0 0x00020000>,
+			      <0 0xe6444000 0 0x2800>;
+			reg-names = "iobase", "serdes";
+			#address-cells = <1>;
+			#size-cells = <0>;
+			clocks = <&cpg CPG_MOD 1505>,
+				 <&cpg CPG_MOD 1506>;
+			clock-names = "rsw2", "eth-phy";
+			status = "disabled";
+		};
+
 		scif0: serial@e6e60000 {
 			compatible = "renesas,scif-r8a779f0",
 				     "renesas,rcar-gen4-scif", "renesas,scif";
