arm: dts: r8a779f0: Add Renesas Ethernet Switch support
This patch adds Ethernet Switch support on R-Car S4 (r8a779f0) SoC.

Signed-off-by: Phong Hoang <phong.hoang.wz@renesas.com>

--- a/arch/arm/dts/r8a779f0-spider-ethernet.dtsi
+++ b/arch/arm/dts/r8a779f0-spider-ethernet.dtsi
@@ -5,11 +5,45 @@
  * Copyright (C) 2021 Renesas Electronics Corp.
  */
 
+&pfc {
+	tsn0_pins: tsn0 {
+		mux {
+			groups = "tsn0_link", "tsn0_mdio";
+			function = "tsn0";
+			drive-strength = <18>;
+			power-source = <1800>;
+		};
+
+		pins_mdio {
+			groups = "tsn0_mdio";
+			drive-strength = <18>;
+			power-source = <1800>;
+		};
+	};
+};
+
 &i2c4 {
 	eeprom@52 {
 		compatible = "rohm,br24g01", "atmel,24c01";
 		label = "ethernet-sub-board";
 		reg = <0x52>;
 		pagesize = <8>;
+	};
+};
+
+&rswitch {
+	status = "okay";
+	pinctrl-0 = <&tsn0_pins>;
+	pinctrl-names = "default";
+	phy-mode = "sgmii";
+	phy-handle = <&etha0>;
+	#address-cells = <1>;
+	#size-cells = <0>;
+
+	etha0: ethernet-phy@0 {
+		phy-connection-type = "sgmii";
+		device_type = "ethernet-phy";
+		compatible = "marvell,88e2110";
+		reg = <1>;
 	};
 };
