--- a/configs/r8a779f0_spider_defconfig
+++ b/configs/r8a779f0_spider_defconfig
@@ -43,8 +43,8 @@ CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_RCAR_I2C=y
 CONFIG_DM_MMC=y
 CONFIG_MMC_IO_VOLTAGE=y
-CONFIG_MMC_UHS_SUPPORT=y
-CONFIG_MMC_HS200_SUPPORT=y
+#CONFIG_MMC_UHS_SUPPORT=y
+#CONFIG_MMC_HS200_SUPPORT=y
 CONFIG_RENESAS_SDHI=y
 CONFIG_MTD=y
 CONFIG_DM_SPI_FLASH=y
