--- a/arch/arm/dts/r8a779f0-spider-ethernet.dtsi
+++ b/arch/arm/dts/r8a779f0-spider-ethernet.dtsi
@@ -4,3 +4,12 @@
  *
  * Copyright (C) 2021 Renesas Electronics Corp.
  */
+
+&i2c4 {
+	eeprom@52 {
+		compatible = "rohm,br24g01", "atmel,24c01";
+		label = "ethernet-sub-board";
+		reg = <0x52>;
+		pagesize = <8>;
+	};
+};
