--- a/drivers/i2c/Kconfig
+++ b/drivers/i2c/Kconfig
@@ -364,7 +364,7 @@ endif
 
 config SYS_I2C_RCAR_I2C
 	bool "Renesas RCar I2C driver"
-	depends on (RCAR_GEN3 || RCAR_GEN2) && DM_I2C
+	depends on (RCAR_GEN4 || RCAR_GEN3 || RCAR_GEN2) && DM_I2C
 	help
 	  Support for Renesas RCar I2C controller.
 
