clk: renesas: Add R-Car Gen4 CPG MSSR driver
Extract the minimum setting for R-Car Gen4 CPG MSSR driver based on
previous generation driver. Mode Monitor Register 1 register is now
required in clock setting in R-Car Gen4 SoC.

Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/drivers/clk/renesas/Kconfig
+++ b/drivers/clk/renesas/Kconfig
@@ -108,3 +108,10 @@ config CLK_R8A779A0
 	depends on CLK_RCAR_GEN3
 	help
 	  Enable this to support the clocks on Renesas R8A779A0 SoC.
+
+config CLK_RCAR_GEN4
+	bool "Renesas RCar Gen4 clock driver"
+	def_bool y if RCAR_GEN4
+	depends on CLK_RENESAS
+	help
+	  Enable this to support the clocks on Renesas RCar Gen4 SoC.
