clk: renesas: Introduce R-Car Gen4 CPG driver
According to the official website [1], the R-Car V3U SoC is based
on the R-Car Gen4 architecture. So, introduce R-Car Gen4 CPG
driver.

[1]
https://www.renesas.com/us/en/products/automotive-products/automotive-system-chips-socs/r-car-v3u-best-class-r-car-v3u-asil-d-system-chip-automated-driving

Based on Linux commit 470e3f0d0b15 ("clk: renesas: rcar-gen4: Introduce
R-Car Gen4 CPG driver") by Yoshihiro Shimoda

Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/drivers/clk/renesas/Kconfig
+++ b/drivers/clk/renesas/Kconfig
@@ -125,8 +125,16 @@ config CLK_R8A77995
 	help
 	  Enable this to support the clocks on Renesas R8A77995 SoC.
 
+config CLK_RCAR_GEN4
+	bool "Renesas RCar Gen4 clock driver"
+	def_bool y if RCAR_GEN4
+	depends on CLK_RENESAS
+	select CLK_RCAR_CPG_LIB
+	help
+	  Enable this to support the clocks on Renesas RCar Gen4 SoC.
+
 config CLK_R8A779A0
 	bool "Renesas R8A779A0 clock driver"
-	depends on CLK_RCAR_GEN3
+	depends on CLK_RCAR_GEN4
 	help
 	  Enable this to support the clocks on Renesas R8A779A0 SoC.
