clk: renesas: Add R8A779G0 V4H clock tables
Add clock tables for R8A779G0 V4H SoC

Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/drivers/clk/renesas/Kconfig
+++ b/drivers/clk/renesas/Kconfig
@@ -115,3 +115,9 @@ config CLK_RCAR_GEN4
 	depends on CLK_RENESAS
 	help
 	  Enable this to support the clocks on Renesas RCar Gen4 SoC.
+
+config CLK_R8A779G0
+	bool "Renesas R8A779G0 clock driver"
+	depends on CLK_RCAR_GEN4
+	help
+	  Enable this to support the clocks on Renesas R8A779G0 SoC.
