--- a/configs/r8a779f0_spider_defconfig
+++ b/configs/r8a779f0_spider_defconfig
@@ -36,6 +36,7 @@ CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_VERSION_VARIABLE=y
 CONFIG_REGMAP=y
 CONFIG_SYSCON=y
+CONFIG_BAUDRATE=1843200
 CONFIG_CLK=y
 CONFIG_CLK_RENESAS=y
 CONFIG_RCAR_GPIO=y
