--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -952,7 +952,8 @@ endif
 
 dtb-$(CONFIG_RCAR_GEN4) += \
 	r8a779a0-falcon-u-boot.dtb \
-	r8a779f0-spider-u-boot.dtb
+	r8a779f0-spider-u-boot.dtb \
+	r8a779g0-whitehawk-u-boot.dtb
 
 ifdef CONFIG_RCAR_GEN4
 DTC_FLAGS += -R 4 -p 0x1000
