ARM: renesas: Add R8A779G0 V4H White Hawk board code
Add board code for R8A779G0 V4H White Hawk board.

Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -808,7 +808,8 @@ DTC_FLAGS += -R 4 -p 0x1000
 endif
 
 dtb-$(CONFIG_RCAR_GEN4) += \
-	r8a779f0-spider-u-boot.dtb
+	r8a779f0-spider-u-boot.dtb \
+	r8a779g0-whitehawk-u-boot.dtb
 
 ifdef CONFIG_RCAR_GEN4
 DTC_FLAGS += -R 4 -p 0x1000
