ARM: renesas: Enable HSCIF0 as default serial interface for V4H White Hawk
Enable HSCIF0 921600bps as default serial interface for V4H White Hawk.

Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/configs/r8a779g0_whitehawk_defconfig
+++ b/configs/r8a779g0_whitehawk_defconfig
@@ -5,6 +5,7 @@ CONFIG_SYS_TEXT_BASE=0x50000000
 CONFIG_ENV_SIZE=0x20000
 CONFIG_ENV_OFFSET=0xFFFE0000
 CONFIG_DM_GPIO=y
+CONFIG_BAUDRATE=921600
 CONFIG_RCAR_GEN4=y
 CONFIG_TARGET_WHITEHAWK=y
 # CONFIG_PSCI_RESET is not set
