ARM: renesas: Add R8A779F0 S4SK board code
Add board code for the R8A779F0 S4SK board.
Based on the original (and large) patch by Michael Dege.

Signed-off-by: Michael Dege <michael.dege@renesas.com>
Signed-off-by: Tam Nguyen <tam.nguyen.xa@renesas.com>
Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -809,6 +809,7 @@ endif
 
 dtb-$(CONFIG_RCAR_GEN4) += \
 	r8a779f0-spider-u-boot.dtb \
+	r8a779f0-s4sk-u-boot.dtb \
 	r8a779g0-whitehawk-u-boot.dtb
 
 ifdef CONFIG_RCAR_GEN4
