--- a/arch/arm/dts/r8a77950-u-boot.dtsi
+++ b/arch/arm/dts/r8a77950-u-boot.dtsi
@@ -12,6 +12,12 @@
 };
 
 / {
+	aliases {
+		/delete-property/ mmc0;
+		/delete-property/ mmc1;
+		/delete-property/ mmc2;
+	};
+
 	soc {
 		rpc: rpc@ee200000 {
 			compatible = "renesas,rpc-r8a7795", "renesas,rpc";
