--- a/arch/arm/dts/r8a77990-u-boot.dtsi
+++ b/arch/arm/dts/r8a77990-u-boot.dtsi
@@ -8,6 +8,12 @@
 #include "r8a779x-u-boot.dtsi"
 
 / {
+	aliases {
+		/delete-property/ mmc0;
+		/delete-property/ mmc1;
+		/delete-property/ mmc2;
+	};
+
 	soc {
 		rpc: rpc@ee200000 {
 			compatible = "renesas,rpc-r8a77990", "renesas,rpc";
