ARM: dts: renesas: r8a779f0: Add SD card support
This adds SD card support on the Spider board.

On-board eMMC and microSD card cannot be used at the same time.
Default setting is on-board eMMC:
- SW3, SW6 on Spider CPU board in neutral position
- SD_CARD_SUPPORT is not set

To use microSD card:
- Set SW3 and SW6 on Spider CPU board to pin 1 side
- Define SD_CARD_SUPPORT

Note:
UHS is not supported since we cannot directly switch voltages in software

Signed-off-by: Tam Nguyen <tam.nguyen.xa@renesas.com>
Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/arch/arm/dts/r8a779f0-spider-cpu.dtsi
+++ b/arch/arm/dts/r8a779f0-spider-cpu.dtsi
@@ -48,6 +48,17 @@
 		regulator-boot-on;
 		regulator-always-on;
 	};
+
+	vcc_sdhi: regulator-vcc-sdhi {
+		compatible = "regulator-fixed";
+
+		regulator-name = "SDHI Vcc";
+		regulator-min-microvolt = <3300000>;
+		regulator-max-microvolt = <3300000>;
+
+		gpio = <&gpio1 24 GPIO_ACTIVE_HIGH>;
+		enable-active-high;
+	};
 };
 
 &extal_clk {
@@ -58,6 +69,19 @@
 	clock-frequency = <32768>;
 };
 
+#ifdef SD_CARD_SUPPORT
+&mmc0 {
+	pinctrl-0 = <&sd_pins>;
+	pinctrl-1 = <&sd_pins>;
+	pinctrl-names = "default", "state_uhs";
+
+	vmmc-supply = <&vcc_sdhi>;
+	vqmmc-supply = <&vcc_sdhi>;
+	cd-gpios = <&gpio1 23 GPIO_ACTIVE_LOW>;
+	bus-width = <4>;
+	status = "okay";
+};
+#else
 &mmc0 {
 	pinctrl-0 = <&mmc_pins>;
 	pinctrl-1 = <&mmc_pins>;
@@ -74,6 +98,7 @@
 	full-pwr-cycle-in-suspend;
 	status = "okay";
 };
+#endif
 
 &i2c0 {
 	pinctrl-0 = <&i2c0_pins>;
@@ -112,11 +137,19 @@
 		function = "i2c4";
 	};
 
+#ifdef SD_CARD_SUPPORT
+	sd_pins: sd {
+		groups = "mmc_data4", "mmc_ctrl";
+		function = "mmc";
+		power-source = <3300>;
+	};
+#else
 	mmc_pins: mmc {
 		groups = "mmc_data8", "mmc_ctrl", "mmc_ds";
 		function = "mmc";
 		power-source = <1800>;
 	};
+#endif
 
 	scif3_pins: scif3 {
 		groups = "scif3_data", "scif3_ctrl";
