--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -274,7 +274,8 @@ config PL022_SPI
 config RENESAS_RPC_SPI
 	bool "Renesas RPC SPI driver"
 	depends on RCAR_GEN3 || RZA1 || RCAR_GEN4
-	imply SPI_FLASH_BAR
+	imply SPI_FLASH_SFDP_SUPPORT if SPI_FLASH_SPANSION
+	imply SPI_FLASH_BAR if !SPI_FLASH_SPANSION
 	help
 	  Enable the Renesas RPC SPI driver, used to access SPI NOR flash
 	  on Renesas RCar Gen3 SoCs. This uses driver model and requires a
