ARM: dts: renesas: r8a779g0: Reserve memory for Realtime Core
Reserve memory region from 0x60000000 to 0x7FFFFFFF
for Realtime core (CR).

Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/arch/arm/dts/r8a779g0-whitehawk.dts
+++ b/arch/arm/dts/r8a779g0-whitehawk.dts
@@ -16,6 +16,17 @@
 	aliases {
 		ethernet0 = &avb0;
 	};
+
+	reserved-memory {
+                #address-cells = <2>;
+                #size-cells = <2>;
+                ranges;
+
+		cr_region: linux,cr_region@60000000 {
+			no-map;
+			reg = <0x00000000 0x60000000 0x0 0x20000000>;
+		};
+	};
 };
 
 &avb0 {
