configs: whitehawk: Disable RPC driver
As requirement of CR side, QSPI Flash usage via RPC driver shall be
disabled and leaving the control of this module to CR side. With
this patch applied, defconfig modification is required to enable
QSPI Flash when only CA side is used.

Signed-off-by: Cong Dang <cong.dang.xn@renesas.com>

--- a/configs/r8a779g0_whitehawk_defconfig
+++ b/configs/r8a779g0_whitehawk_defconfig
@@ -65,5 +65,5 @@ CONFIG_DM_REGULATOR_GPIO=y
 CONFIG_SCIF_CONSOLE=y
 CONFIG_SPI=y
 CONFIG_DM_SPI=y
-CONFIG_RENESAS_RPC_SPI=y
+# CONFIG_RENESAS_RPC_SPI is not set
 CONFIG_OF_LIBFDT_OVERLAY=y
