ARM: rmobile: Introduce CONFIG_RCAR_64 symbol
Introduce common Kconfig symbol for 64bit R-Car platforms and move
common configuration options into it to prevent duplication of Kconfig
lists later on, when new Generation is added.

Signed-off-by: Marek Vasut <marek.vasut+renesas@mailbox.org>
(cherry picked from commit ef72c1ef294f06a675206117e7573c6307169311)
Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -946,16 +946,12 @@ dtb-$(CONFIG_RCAR_GEN3) += \
 	r8a77990-ebisu-u-boot.dtb \
 	r8a77995-draak-u-boot.dtb
 
-ifdef CONFIG_RCAR_GEN3
-DTC_FLAGS += -R 4 -p 0x1000
-endif
-
 dtb-$(CONFIG_RCAR_GEN4) += \
 	r8a779a0-falcon-u-boot.dtb \
 	r8a779f0-spider-u-boot.dtb \
 	r8a779g0-whitehawk-u-boot.dtb
 
-ifdef CONFIG_RCAR_GEN4
+ifdef CONFIG_RCAR_64
 DTC_FLAGS += -R 4 -p 0x1000
 endif
 
