--- a/arch/arm/mach-rmobile/Kconfig
+++ b/arch/arm/mach-rmobile/Kconfig
@@ -1,5 +1,22 @@
 if ARCH_RMOBILE
 
+# Renesas ARM SoCs R-Car Gen3/Gen4 (64bit)
+config RCAR_64
+	bool
+	select ARM64
+	select PHY
+	select CMD_CACHE
+	select OF_BOARD_SETUP
+	select PINCTRL
+	select PINCONF
+	select PINCTRL_PFC
+	select POSITION_INDEPENDENT
+	imply CMD_FS_UUID
+	imply CMD_GPT
+	imply CMD_UUID
+	imply CMD_MMC_SWRITE if MMC
+	imply SUPPORT_EMMC_RPMB if MMC
+
 choice
 	prompt "Target Renesas SoC select"
 	default RCAR_32
@@ -10,20 +27,8 @@ config RCAR_32
 
 config RCAR_GEN3
 	bool "Renesas ARM SoCs R-Car Gen3 (64bit)"
-	select ARM64
-	select PHY
-	select CMD_CACHE
-	select OF_BOARD_SETUP
-	select PINCTRL
-	select PINCONF
-	select PINCTRL_PFC
-	select POSITION_INDEPENDENT
+	select RCAR_64
 	select SUPPORT_SPL
-	imply CMD_FS_UUID
-	imply CMD_GPT
-	imply CMD_UUID
-	imply CMD_MMC_SWRITE if MMC
-	imply SUPPORT_EMMC_RPMB if MMC
 	imply SPL
 	imply SPL_BOARD_INIT
 	imply SPL_GZIP
@@ -37,19 +42,7 @@ config RCAR_GEN3
 
 config RCAR_GEN4
 	bool "Renesas ARM SoCs R-Car Gen4 (64bit)"
-	select ARM64
-	select PHY
-	select CMD_CACHE
-	select OF_BOARD_SETUP
-	select PINCTRL
-	select PINCONF
-	select PINCTRL_PFC
-	select POSITION_INDEPENDENT
-	imply CMD_FS_UUID
-	imply CMD_GPT
-	imply CMD_UUID
-	imply CMD_MMC_SWRITE if MMC
-	imply SUPPORT_EMMC_RPMB if MMC
+	select RCAR_64
 
 config RZA1
 	prompt "Renesas ARM SoCs RZ/A1 (32bit)"
