configs: spider: Make the default Ethernet Switch port visible
Make the default Ethernet Switch port visible.
There is no functional changes.

Signed-off-by: Tam Nguyen <tam.nguyen.xa@renesas.com>
Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/configs/r8a779f0_spider_defconfig
+++ b/configs/r8a779f0_spider_defconfig
@@ -42,6 +42,7 @@ CONFIG_CLK_RENESAS=y
 CONFIG_RCAR_GPIO=y
 CONFIG_DM_ETH=y
 CONFIG_RENESAS_ETHER_SWITCH=y
+CONFIG_RENESAS_ETHER_SWITCH_DEFAULT_PORT=0
 CONFIG_PHY_MARVELL=y
 CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_RCAR_I2C=y
