net: rswitch: Disable clause 45 to adapt to VDK environment
Disable clause 45 to adapt to VDK environment.

Signed-off-by: LUU HOAI <hoai.luu.ub@renesas.com>

--- a/arch/arm/dts/r8a779f0-spider-ethernet.dtsi
+++ b/arch/arm/dts/r8a779f0-spider-ethernet.dtsi
@@ -69,6 +69,7 @@
 	phy-handle = <&etha0>;
 	#address-cells = <1>;
 	#size-cells = <0>;
+	vpf_mode;
 
 	etha0: ethernet-phy@1 {
 		phy-connection-type = "sgmii";
