--- a/drivers/spi/Kconfig
+++ b/drivers/spi/Kconfig
@@ -312,7 +312,7 @@ config SPI_QUP
 
 config RENESAS_RPC_SPI
 	bool "Renesas RPC SPI driver"
-	depends on RCAR_GEN3 || RZA1 || RCAR_GEN4
+	depends on RCAR_64 || RZA1
 	imply SPI_FLASH_SFDP_SUPPORT if SPI_FLASH_SPANSION
 	imply SPI_FLASH_BAR if !SPI_FLASH_SPANSION
 	help
