net: ravb: Make use of CONFIG_RCAR_64
Use CONFIG_RCAR_64 to make the driver available on both
R-Car Gen3 and R-Car Gen4

Signed-off-by: Hai Pham <hai.pham.ud@renesas.com>

--- a/drivers/net/Kconfig
+++ b/drivers/net/Kconfig
@@ -668,7 +668,7 @@ config GMAC_ROCKCHIP
 
 config RENESAS_RAVB
 	bool "Renesas Ethernet AVB MAC"
-	depends on DM_ETH && (RCAR_GEN3 || RCAR_GEN4)
+	depends on DM_ETH && RCAR_64
 	select PHYLIB
 	help
 	  This driver implements support for the Ethernet AVB block in
