--- a/arch/arm/dts/r8a779h0-gray-hawk-cpu.dtsi
+++ b/arch/arm/dts/r8a779h0-gray-hawk-cpu.dtsi
@@ -47,6 +47,21 @@
 	status = "okay";
 };
 
+&pfc {
+	pinctrl-0 = <&scif_clk_pins>;
+	pinctrl-names = "default";
+
+	hscif0_pins: hscif0 {
+		groups = "hscif0_data", "hscif0_ctrl";
+		function = "hscif0";
+	};
+
+	scif_clk_pins: scif_clk {
+		groups = "scif_clk";
+		function = "scif_clk";
+	};
+};
+
 &scif_clk {
 	clock-frequency = <24000000>;
 };
