--- a/arch/arm/dts/r8a779h0-gray-hawk.dts
+++ b/arch/arm/dts/r8a779h0-gray-hawk.dts
@@ -12,3 +12,12 @@
 	model = "Renesas Gray Hawk CPU and Breakout boards based on r8a779h0";
 	compatible = "renesas,gray-hawk-breakout", "renesas,gray-hawk-cpu", "renesas,r8a779h0";
 };
+
+&i2c0 {
+	eeprom@51 {
+		compatible = "rohm,br24g01", "atmel,24c01";
+		label = "breakout-board";
+		reg = <0x51>;
+		pagesize = <8>;
+	};
+};
