--- a/arch/arm/dts/r8a779h0-gray-hawk.dts
+++ b/arch/arm/dts/r8a779h0-gray-hawk.dts
@@ -8,6 +8,7 @@
 /dts-v1/;
 #include "r8a779h0-gray-hawk-cpu.dtsi"
 #include "r8a779h0-gray-hawk-csi-dsi.dtsi"
+#include "r8a779h0-gray-hawk-ethernet.dtsi"
 
 / {
 	model = "Renesas Gray Hawk CPU and Breakout boards based on r8a779h0";
