ARM: dts: renesas: Disable CPG node in R8A78000 X5H DT
CPG model has been changed without enough detail information on VDK environment.
This patch disables CPG node on R8A78000 (R-Car X5H) SoC.

Signed-off-by: Khanh Le <khanh.le.xr@renesas.com>

--- a/arch/arm/dts/r8a78000.dtsi
+++ b/arch/arm/dts/r8a78000.dtsi
@@ -70,6 +70,7 @@
 			#clock-cells = <2>;
 			#power-domain-cells = <0>;
 			#reset-cells = <1>;
+			status = "disabled";
 		};
 
 		gic: interrupt-controller@38000000 {
