ARM: dts: renesas: Update base address for HSCIF0 in R8A78000 X5H DT
This patch updates base address for HSCIF0 on R8A78000 (R-Car X5H) SoC to run on VDK environment.

Signed-off-by: Khanh Le <khanh.le.xr@renesas.com>

--- a/arch/arm/dts/r8a78000.dtsi
+++ b/arch/arm/dts/r8a78000.dtsi
@@ -56,9 +56,9 @@
 		#size-cells = <2>;
 		ranges;
 
-		hscif0: serial@e6540000 {
+		hscif0: serial@c0710000 {
 			compatible = "renesas,rcar-gen4-hscif", "renesas,hscif";
-			reg = <0 0xe6540000 0 0x60>;
+			reg = <0 0xc0710000 0 0x60>;
 			status = "disabled";
 		};
 
